<resources>
    <string name="app_name">Faircon</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">yes</string>
    <string name="text_info">Info</string>

    <string name="auth_token">auth_token</string>
    <string name="password_reset_info">We\'ve emailed you instructions for setting your password. If an account exists
        with the email you entered.
        You should receive them shortly.If you don\'t receive an email, please make sure you\'ve entered the address you
        registered with,
        and check your spam folder.
    </string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="return_to_launcher_fragment">Return</string>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="email_field">Email</string>
    <string name="field_password">Password</string>
    <string name="field_login">Login</string>
    <string name="field_username">Username</string>
    <string name="field_confirm_password">Confirm password</string>
    <string name="field_register">Register</string>
    <string name="network_error_response">Error</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="my_blogs">My Blogs</string>
    <string name="home">Home</string>
    <string name="create">Create</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="launcher">Launcher</string>
    <string name="login">Login</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_forgot_password">Forgot password</string>
    <string name="process_death_state">process_death_state</string>
    <string name="invalid_login_credentials">Invalid login</string>
    <string name="your_username">Your username</string>
    <string name="change_password">Change password</string>
    <string name="your_email">Your email</string>
    <string name="fragment_account">Account</string>
    <string name="fragment_change_password">Change password</string>
    <string name="fragment_update_account">Update account</string>

    <string name="current_password">Current password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="new_password">New password</string>
    <string name="update_password">Update password</string>

</resources>